@@ -1,4 +1,4 @@
-# pthread.m4
+# pthread.m4 serial 2
 dnl Copyright (C) 2009-2011 Free Software Foundation, Inc.
 dnl This file is free software; the Free Software Foundation
 dnl gives unlimited permission to copy and/or distribute it,
@@ -39,9 +39,9 @@ AC_DEFUN([gl_PTHREAD_CHECK],
    LIB_PTHREAD=
    if test $ac_cv_header_pthread_h = yes; then
      gl_saved_libs=$LIBS
-     AC_SEARCH_LIBS([pthread_create], [pthread],
-       [if test "$ac_cv_search_pthread_create" != "none required"; then
-          LIB_PTHREAD="$ac_cv_search_pthread_create"
+     AC_SEARCH_LIBS([pthread_join], [pthread],
+       [if test "$ac_cv_search_pthread_join" != "none required"; then
+          LIB_PTHREAD="$ac_cv_search_pthread_join"
         fi])
      LIBS="$gl_saved_libs"
    fi
