@@ -1,3 +1,9 @@
+2011-09-01  Bruno Haible  <bruno@clisp.org>
+
+	pthread: Determine $(LIB_PTHREAD) correctly on IRIX 6.5.
+	* m4/pthread.m4 (gl_PTHREAD_CHECK): Check for pthread_join, not
+	pthread_create.
+
 2011-09-01  Paul Eggert  <eggert@cs.ucla.edu>
 
 	openat: work around AIX 7.1 fstatat issue
